[tool.poetry]
name = "podcatcher"
version = "0.0.1"
description = "Audio media crawler for the lbry."
authors = ["btzr-io <btzr.io@gmail.com>"]
license = "MIT"
# include main package
packages = [
    { include = "main.py", from = "src" },
]

[tool.poetry.scripts]
podcatcher = "main:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
pandas = "^1.3.0"
httpx = "^0.18.2"
PyPika = "^0.48.7"
Pygments = "^2.9.0"
rich = "^10.6.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
