[tool.poetry]
name = "podcatcher"
version = "0.0.1"
description = "Audio media crawler for the lbry."
authors = ["btzr-io <btzr.io@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Hound-fm/podcatcher"

# include main package
packages = [
    { include = "main.py", from = "src" },
]

[tool.poetry.scripts]
podcatcher = "main:cli"

[tool.taskipy.tasks]
format = "black ./"
update-hooks = { cmd = "pre-commit install & pre-commit run --all-files", help = "Update and test pre-commit hooks." }

[tool.poetry.dependencies]
python = "^3.8"
eland="^7.14.1b1"
click = "^8.0.3"
pandas = "^1.3.5"
httpx = "^0.18.2"
PyPika = "^0.48.8"
rich = "^10.6.0"
python-dotenv = "^0.19.2"
beautifulsoup4 = "^4.10.0"
spacy = "^3.2.1"
fasttext-langdetect = "^1.0.3"
wget = "^3.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pre-commit = "^2.14.0"
taskipy = "^1.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
